Tweak landing spacing and switch to light marketing palette

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="logo" aria-hidden="true"></div>
         <div>
           <strong>RecruiterIQ</strong>
-          <div style="color:rgba(233,238,252,.62);font-size:12px">Recruiting OS Prototyp</div>
+          <div class="brandMeta">Recruiting OS Prototyp</div>
         </div>
       </a>
       <div class="topnav">
