Improve landing spacing and add hero illustration

--- a/index.html
+++ b/index.html
@@ -27,55 +27,59 @@
       </div>
     </div>
 
-    <div class="hero">
-      <div class="card heroL">
+    <section class="heroCenter">
+      <div class="heroCenterBg" aria-hidden="true"></div>
+      <div class="heroCenterInner">
         <div class="kicker">EVIDENCE-FIRST · ANTI-TEMPLATE · LOCAL-LLM OPTIONAL</div>
         <h1>KI macht Bewerbungen perfekt. RecruiterIQ macht sie prüfbar.</h1>
         <div class="sub">
           Recruiter bekommen immer mehr KI-optimierte Bewerbungen. RecruiterIQ sortiert nicht nach "KI-Erkennung",
           sondern nach <strong>Belegbarkeit</strong>: Claims, Evidence, Widersprüche, Proof-of-Work, Scorecards und klare nächste Schritte.
         </div>
-
         <div class="cta">
           <a class="btn primary" href="/login?next=%2Finbox">Inbox öffnen</a>
           <a class="btn" href="/features">Features ansehen</a>
           <a class="btn ghost" href="/login">Login</a>
         </div>
-
         <div class="metaRow">
-          <span class="pill"><span class="dot"></span>Multi-Tenant Pilot Inbox</span>
-          <span class="pill"><span class="dot b"></span>Audit + CSV Export/Import</span>
-          <span class="pill"><span class="dot w"></span>Proof-of-Work Links</span>
+          <span class="pill"><span class="dot"></span>Evidence Pack</span>
+          <span class="pill"><span class="dot b"></span>Proof-of-Work</span>
+          <span class="pill"><span class="dot w"></span>Audit + Exporte</span>
         </div>
       </div>
+    </section>
 
-      <div class="card heroR">
-        <div class="bgArt" aria-hidden="true"></div>
-        <div class="section">
-          <h2>Was du in 5 Minuten siehst</h2>
-          <div class="list">
-            <ul>
-              <li>Inbox mit Must-have Gate, Duplikat-Clustering und Batch Actions</li>
-              <li>Evidence Pack: strongest/weakest Claims + Flags</li>
-              <li>Templates + Sequences (Drip) direkt aus der Bewerbung</li>
-              <li>Proof-of-Work Assessment als öffentlicher Link</li>
-              <li>Hiring Manager Queue + Entscheidungen</li>
-            </ul>
-          </div>
+    <div class="card productCard" style="margin-top:22px">
+      <div class="productGrid">
+        <div class="productArt">
+          <img src="/assets/hero-inbox.svg" alt="RecruiterIQ Inbox Illustration"/>
         </div>
-        <div class="section">
-          <h2>Für wen?</h2>
-          <div class="list">
-            <ul>
-              <li>Recruiter und Talent Acquisition Teams</li>
-              <li>HR Departments mit hohem Inbound-Volumen</li>
-              <li>Hiring Manager, die schnelle, begründete Entscheidungen wollen</li>
-            </ul>
+        <div class="productCopy">
+          <h2>In 5 Minuten verstehst du, was wirklich zählt</h2>
+          <div class="sub">
+            Bewerbungen sind oft "perfekt" geschrieben. Wir bringen sie zurück auf Signal: Evidence, Konsistenz, Ownership.
+            Und wir machen den nächsten Schritt einfach: Template, Sequence, Proof-of-Work, HM Entscheidung.
           </div>
-        </div>
-        <div class="callout">
-          <div class="calloutTitle">Kein "AI detection".</div>
-          <div class="calloutBody">Wir bewerten Signalqualität: Evidence, Konsistenz, Ownership. Proof-of-Work liefert harte Daten statt perfekter Formulierungen.</div>
+          <div class="grid2" style="margin-top:16px">
+            <div class="list">
+              <ul>
+                <li>Inbox mit Must-have Gate, Duplikat-Clustering und Batch Actions</li>
+                <li>Evidence Pack: strongest/weakest Claims + Flags</li>
+                <li>Scorecards + Interview Kit</li>
+              </ul>
+            </div>
+            <div class="list">
+              <ul>
+                <li>Templates + Sequences (Drip) direkt aus der Bewerbung</li>
+                <li>Proof-of-Work Link (public) + Completion Tracking</li>
+                <li>Hiring Manager Queue + Entscheidungen</li>
+              </ul>
+            </div>
+          </div>
+          <div class="callout" style="position:relative;inset:auto;margin-top:16px">
+            <div class="calloutTitle">Kein "AI detection".</div>
+            <div class="calloutBody">Wir bewerten Signalqualität: Evidence, Konsistenz, Ownership. Proof-of-Work liefert harte Daten statt perfekter Formulierungen.</div>
+          </div>
         </div>
       </div>
     </div>
