Polish marketing pages: better copy (Sie) and more MagicUI-like layout

--- a/features.html
+++ b/features.html
@@ -29,8 +29,8 @@
 
     <div class="card heroL" style="padding:18px">
       <div class="kicker">FEATURES · WORKFLOW · GOVERNANCE</div>
-      <h1 style="margin-top:12px">Alles, was Recruiter brauchen, um aus "perfekt" wieder "signal" zu machen.</h1>
-      <div class="sub">Diese Seite ist absichtlich klassisch: Feature-Blöcke, die man im Sales-Deck direkt übernehmen kann.</div>
+      <h1 style="margin-top:12px">Alles, was Sie brauchen, um aus „perfekt“ wieder „Signal“ zu machen.</h1>
+      <div class="sub">Klassische Landing-Struktur: Feature-Blöcke, die Sie direkt in ein Sales-Deck übernehmen können.</div>
       <div class="cta">
         <a class="btn primary" href="/login?next=%2Finbox">Jetzt ausprobieren</a>
         <a class="btn" href="/login?next=%2Fhm">HM Portal testen</a>
@@ -40,22 +40,22 @@
     <div class="grid3">
       <div class="card mini">
         <h3>1. Worklist</h3>
-        <p>Priorisierte Tagesliste: New / Needs Info / Waiting HM / Assessment Due. Kein Scroll-Death.</p>
+        <p>Priorisierte Tagesliste: New / Needs Info / Waiting HM / Assessment Due. Weniger Kontextwechsel, mehr Durchsatz.</p>
       </div>
       <div class="card mini">
         <h3>2. Inbox mit Batch Actions</h3>
-        <p>Filter, Pagination, Duplikat-Cluster, Multi-Select + Batch-Status. Ein echter Recruiter-Workflow.</p>
+        <p>Filter, Pagination, Duplikat-Cluster, Multi-Select + Batch-Status. Der Kern-Workflow für Recruiting-Teams.</p>
       </div>
       <div class="card mini">
         <h3>3. Evidence Pack</h3>
-        <p>Strongest/weakest Claims + Summary. Evidence-Gaps sofort sichtbar statt "klingt gut".</p>
+        <p>Strongest/weakest Claims + Summary. Evidence-Gaps sofort sichtbar statt „klingt gut“.</p>
       </div>
     </div>
 
     <div class="grid3">
       <div class="card mini">
         <h3>4. Flags (Widersprüche)</h3>
-        <p>Heuristiken markieren typische KI-Artefakte ohne KI-Detektor: Buzzwords, Zeitlinien, fehlende Links.</p>
+        <p>Heuristiken markieren typische Artefakte ohne „KI-Detektor“: Buzzwords ohne Evidence, Zeitlinien, fehlende Links.</p>
       </div>
       <div class="card mini">
         <h3>5. Proof-of-Work Links</h3>
@@ -63,18 +63,18 @@
       </div>
       <div class="card mini">
         <h3>6. Scorecards</h3>
-        <p>1–5 Bewertungen pro Kriterium + Recommendation. Für Recruiter und Hiring Manager.</p>
+        <p>1–5 Bewertungen pro Kriterium + Empfehlung. Für Recruiter und Hiring Manager.</p>
       </div>
     </div>
 
     <div class="grid3">
       <div class="card mini">
         <h3>7. Templates + Sequences</h3>
-        <p>Vorlagen mit Variablen, Drip-Sequences, "Run due" Scheduler-Simulation. Weniger Copy/Paste.</p>
+        <p>Vorlagen mit Variablen, Drip-Sequences, „Run due“ Scheduler-Simulation. Weniger Copy/Paste.</p>
       </div>
       <div class="card mini">
         <h3>8. Hiring Manager Portal</h3>
-        <p>Shortlist/Queue + Approve/Hold/Reject mit Notes. Entscheidungen schneller und auditierbar.</p>
+        <p>Shortlist/Queue + Approve/Hold/Reject mit Notizen. Entscheidungen schneller und auditierbar.</p>
       </div>
       <div class="card mini">
         <h3>9. Governance</h3>
@@ -84,7 +84,7 @@
 
     <div class="card section" style="padding:16px">
       <h2>Integrationen</h2>
-      <p>Im Prototype als ATS-Stub via CSV (Import/Export). In Produktform: ATS/XING-Konnektoren und Team-Rollen.</p>
+      <p>Im Prototype als ATS-Stub via CSV (Import/Export). In Produktform: ATS/XING-Konnektoren, SSO/SCIM und Rollenmodelle.</p>
       <div class="grid2">
         <div class="card list">
           <h2 style="margin:0 0 8px">CSV Import</h2>
