--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         </div>
       </a>
       <div class="topnav">
+        <a class="btn" href="#how">So funktioniert's</a>
         <a class="btn" href="#usps">USPs</a>
         <a class="btn" href="/features">Features</a>
         <a class="btn primary" href="/login">Login</a>
@@ -31,20 +32,45 @@
       <div class="heroCenterBg" aria-hidden="true"></div>
       <div class="heroCenterInner">
         <div class="kicker">EVIDENCE-FIRST · ANTI-TEMPLATE · LOCAL-LLM OPTIONAL</div>
-        <h1>KI macht Bewerbungen perfekt. RecruiterIQ macht sie prüfbar.</h1>
+        <h1>KI macht Bewerbungen perfekt. RecruiterIQ macht Entscheidungen belegbar.</h1>
         <div class="sub">
-          Recruiter bekommen immer mehr KI-optimierte Bewerbungen. RecruiterIQ sortiert nicht nach "KI-Erkennung",
-          sondern nach <strong>Belegbarkeit</strong>: Claims, Evidence, Widersprüche, Proof-of-Work, Scorecards und klare nächste Schritte.
+          Sie bekommen immer mehr KI-optimierte Bewerbungen. RecruiterIQ sortiert nicht nach „KI-Erkennung“,
+          sondern nach <strong>Signalqualität</strong>: Claims, Evidence, Konsistenz, Proof-of-Work, Scorecards und klaren nächsten Schritten.
+        </div>
+        <div class="eyebrowRow" aria-label="Key outcomes">
+          <span class="eyebrow">Schnelleres Screening</span>
+          <span class="eyebrow">Weniger False Positives</span>
+          <span class="eyebrow">Nachvollziehbare HM-Entscheidungen</span>
         </div>
         <div class="cta">
-          <a class="btn primary" href="/login?next=%2Finbox">Inbox öffnen</a>
-          <a class="btn" href="/features">Features ansehen</a>
+          <a class="btn primary" href="/login?next=%2Finbox">Demo öffnen</a>
+          <a class="btn" href="/features">Features</a>
           <a class="btn ghost" href="/login">Login</a>
         </div>
         <div class="metaRow">
           <span class="pill"><span class="dot"></span>Evidence Pack</span>
           <span class="pill"><span class="dot b"></span>Proof-of-Work</span>
           <span class="pill"><span class="dot w"></span>Audit + Exporte</span>
+        </div>
+        <div class="logoMarquee" aria-label="Pilot-ready modules">
+          <div class="logoTrack">
+            <span class="logoTag">INBOX</span>
+            <span class="logoTag">EVIDENCE PACK</span>
+            <span class="logoTag">FLAGS</span>
+            <span class="logoTag">SCORECARDS</span>
+            <span class="logoTag">SEQUENCES</span>
+            <span class="logoTag">HM PORTAL</span>
+            <span class="logoTag">CSV IMPORT/EXPORT</span>
+            <span class="logoTag">AUDIT</span>
+            <span class="logoTag">INBOX</span>
+            <span class="logoTag">EVIDENCE PACK</span>
+            <span class="logoTag">FLAGS</span>
+            <span class="logoTag">SCORECARDS</span>
+            <span class="logoTag">SEQUENCES</span>
+            <span class="logoTag">HM PORTAL</span>
+            <span class="logoTag">CSV IMPORT/EXPORT</span>
+            <span class="logoTag">AUDIT</span>
+          </div>
         </div>
       </div>
     </section>
@@ -55,10 +81,10 @@
           <img src="/assets/hero-inbox.svg" alt="RecruiterIQ Inbox Illustration"/>
         </div>
         <div class="productCopy">
-          <h2>In 5 Minuten verstehst du, was wirklich zählt</h2>
+          <h2>In 5 Minuten sehen Sie, was wirklich zählt</h2>
           <div class="sub">
-            Bewerbungen sind oft "perfekt" geschrieben. Wir bringen sie zurück auf Signal: Evidence, Konsistenz, Ownership.
-            Und wir machen den nächsten Schritt einfach: Template, Sequence, Proof-of-Work, HM Entscheidung.
+            Bewerbungen sind oft „perfekt“ geschrieben. Wir bringen sie zurück auf Signal: Evidence, Konsistenz, Ownership.
+            Und wir machen den nächsten Schritt einfach: Template, Sequence, Proof-of-Work, HM-Entscheidung.
           </div>
           <div class="grid2" style="margin-top:16px">
             <div class="list">
@@ -77,21 +103,58 @@
             </div>
           </div>
           <div class="callout" style="position:relative;inset:auto;margin-top:16px">
-            <div class="calloutTitle">Kein "AI detection".</div>
+            <div class="calloutTitle">Kein „AI detection“.</div>
             <div class="calloutBody">Wir bewerten Signalqualität: Evidence, Konsistenz, Ownership. Proof-of-Work liefert harte Daten statt perfekter Formulierungen.</div>
           </div>
         </div>
       </div>
     </div>
 
+    <div class="sectionHeader" id="how">
+      <h2>So funktioniert’s</h2>
+      <p>RecruiterIQ ist ein Workflow: Es bewertet nicht nur, sondern führt Sie bis zur Entscheidung. Ohne Blackbox-Versprechen.</p>
+    </div>
+    <div class="steps">
+      <div class="card step">
+        <div class="stepNum">1</div>
+        <h3>Signal extrahieren</h3>
+        <p>Claims werden in Evidence-Elemente zerlegt. Evidence Gaps und Flags (Inkonistenzen) werden sichtbar.</p>
+      </div>
+      <div class="card step">
+        <div class="stepNum">2</div>
+        <h3>Signal verifizieren</h3>
+        <p>Proof-of-Work liefert messbare Antworten. Interview Kit und Follow-ups schließen Evidence-Lücken gezielt.</p>
+      </div>
+      <div class="card step">
+        <div class="stepNum">3</div>
+        <h3>Entscheidung beschleunigen</h3>
+        <p>Scorecards + HM-Queue strukturieren Feedback. Audit-Trail und Exporte sichern Governance und Reporting.</p>
+      </div>
+    </div>
+
+    <div class="stats" aria-label="Business outcomes">
+      <div class="card stat">
+        <div class="statVal">Evidence-first</div>
+        <div class="statLbl">Sie priorisieren nach Belegbarkeit statt nach Sprachqualität.</div>
+      </div>
+      <div class="card stat">
+        <div class="statVal">Workflow-first</div>
+        <div class="statLbl">Templates, Sequences, HM-Queue und Scorecards sind ein durchgängiger Flow.</div>
+      </div>
+      <div class="card stat">
+        <div class="statVal">Audit-ready</div>
+        <div class="statLbl">Events/Audit exportierbar (CSV). Ideal für HR-Reporting und Compliance.</div>
+      </div>
+    </div>
+
     <div class="grid" id="usps">
       <div class="card mini">
-        <h3>USP 1: Evidence statt "KI-Detektor"</h3>
+        <h3>USP 1: Evidence statt „KI-Detektor“</h3>
         <p>Wir bewerten die <em>Belegbarkeit</em> von Claims (Artefakte, Links, Metriken) und markieren Evidence Gaps.</p>
       </div>
       <div class="card mini">
         <h3>USP 2: Proof-of-Work als Filter</h3>
-        <p>Automatisch generierte Micro-Tasks und ein öffentlicher Assessment-Link: echte Signalqualität statt perfekter Texte.</p>
+        <p>Micro-Tasks und ein öffentlicher Assessment-Link: echte Signalqualität statt perfekter Texte.</p>
       </div>
       <div class="card mini">
         <h3>USP 3: Workflow, nicht nur Scoring</h3>
@@ -121,13 +184,26 @@
         <div class="card span3">
           <h3 style="margin:0 0 6px;font-size:15px">Ready für XING (Sales-Story)</h3>
           <div class="sub" style="font-size:13px;max-width:none">
-            Für Recruiter/HR als Add-on: reduziert Time-to-First-Review, erhöht Signalqualität, macht Hiring-Manager Entscheidungen schneller und nachvollziehbar.
+            Für Recruiter/HR als Add-on: verkürzt Time-to-First-Review, erhöht Signalqualität und macht Hiring-Manager Entscheidungen schneller und nachvollziehbar.
           </div>
         </div>
       </div>
       <div class="cta" style="margin-top:12px">
         <a class="btn primary" href="/features">Zu den Features</a>
         <a class="btn" href="/login">Zum Login</a>
+      </div>
+    </div>
+
+    <div class="card ctaBanner">
+      <div class="ctaBannerInner">
+        <div>
+          <h3>Bereit für eine schnelle Demo?</h3>
+          <div class="sub">Loggen Sie sich ein (Demo-Passwort: <span class="mono">demo</span>) und öffnen Sie direkt die Inbox. Danach können Sie in der App oben rechts Rollen wechseln.</div>
+        </div>
+        <div class="cta" style="margin-top:0">
+          <a class="btn primary" href="/login?next=%2Finbox">Zur Inbox</a>
+          <a class="btn" href="/features">Features</a>
+        </div>
       </div>
     </div>
 
