Add real product screenshots and embed them in marketing pages

--- a/features.html
+++ b/features.html
@@ -37,6 +37,38 @@
       </div>
     </div>
 
+    <div class="card productCard" style="margin-top:22px">
+      <div class="productGrid">
+        <div class="productArt">
+          <div class="shotFrame" aria-label="Product screenshot: Inbox">
+            <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
+            <img src="/assets/shots/inbox.png" alt="RecruiterIQ Inbox Screenshot"/>
+          </div>
+          <div class="shotGrid" aria-label="More product screenshots">
+            <div class="shotFrame shotSmall">
+              <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
+              <img src="/assets/shots/triage.png" alt="RecruiterIQ Triage Screenshot"/>
+            </div>
+            <div class="shotFrame shotSmall">
+              <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
+              <img src="/assets/shots/hm.png" alt="RecruiterIQ Hiring Manager Screenshot"/>
+            </div>
+          </div>
+          <div class="shotCaption">Screenshots werden lokal aus dem Prototype generiert.</div>
+        </div>
+        <div class="productCopy">
+          <h2>Beispiele aus der Oberfläche</h2>
+          <div class="sub">
+            Inbox, Triage und HM-Portal sind bewusst workflow-first. Die App ist nach Login nutzbar; für die Demo reicht das Passwort <span class="mono">demo</span>.
+          </div>
+          <div class="cta" style="margin-top:14px">
+            <a class="btn primary" href="/login?next=%2Finbox">Inbox öffnen</a>
+            <a class="btn" href="/login?next=%2Ftriage">Triage öffnen</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="grid3">
       <div class="card mini">
         <h3>1. Worklist</h3>
