--- a/index.html
+++ b/index.html
@@ -78,7 +78,21 @@
     <div class="card productCard" style="margin-top:22px">
       <div class="productGrid">
         <div class="productArt">
-          <img src="/assets/hero-inbox.svg" alt="RecruiterIQ Inbox Illustration"/>
+          <div class="shotFrame" aria-label="Product screenshot: Inbox">
+            <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
+            <img src="/assets/shots/inbox.png" alt="RecruiterIQ Inbox Screenshot"/>
+          </div>
+          <div class="shotGrid" aria-label="More product screenshots">
+            <div class="shotFrame shotSmall">
+              <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
+              <img src="/assets/shots/triage.png" alt="RecruiterIQ Triage Screenshot"/>
+            </div>
+            <div class="shotFrame shotSmall">
+              <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
+              <img src="/assets/shots/hm.png" alt="RecruiterIQ Hiring Manager Screenshot"/>
+            </div>
+          </div>
+          <div class="shotCaption">Echte Screenshots aus dem laufenden Prototype (lokal gerendert).</div>
         </div>
         <div class="productCopy">
           <h2>In 5 Minuten sehen Sie, was wirklich zählt</h2>
