Generate and use hero shots (inbox detail + assessment)

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
         <div class="productArt">
           <div class="shotFrame" aria-label="Product screenshot: Inbox">
             <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
-            <img src="/assets/shots/inbox.png" alt="RecruiterIQ Inbox Screenshot"/>
+            <img src="/assets/shots/inbox-detail.png" alt="RecruiterIQ Inbox Screenshot (Detail geöffnet)"/>
           </div>
           <div class="shotGrid" aria-label="More product screenshots">
             <div class="shotFrame shotSmall">
               <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
-              <img src="/assets/shots/triage.png" alt="RecruiterIQ Triage Screenshot"/>
+              <img src="/assets/shots/assessment.png" alt="RecruiterIQ Proof-of-Work Assessment Screenshot"/>
             </div>
             <div class="shotFrame shotSmall">
               <div class="shotDots" aria-hidden="true"><span></span><span></span><span></span></div>
